--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.control.cell.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.VBox?>
 <SplitPane dividerPositions="0.3" prefHeight="400" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.MainController">
     <VBox alignment="TOP_CENTER" GridPane.columnIndex="0">
         <ToolBar style="-fx-background-color: #f0f0f0;">
@@ -19,29 +18,5 @@
 
         </TreeView>
     </VBox>
-    <VBox prefHeight="291.0" prefWidth="454.0" GridPane.columnIndex="1">
-        <ToolBar style="-fx-background-color: #f0f0f0">
-            <Button fx:id="copy" onAction="#copySecret" text="Copy" />
-            <Button fx:id="show" onAction="#showSecret" text="Show" />
-            <Separator orientation="VERTICAL" />
-            <Button onAction="#addSecret" text="New" />
-            <Button mnemonicParsing="false" onAction="#delete" text="Delete" />
-            <Separator orientation="VERTICAL" />
-            <TextField fx:id="filterField" promptText="Search secret" />
-        </ToolBar>
-        <TableView fx:id="secretsTable" VBox.vgrow="ALWAYS">
-            <columns>
-                <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="secretName" />
-                    </cellValueFactory>
-                </TableColumn>
-                <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="display" />
-                    </cellValueFactory>
-                </TableColumn>
-            </columns>
-        </TableView>
-    </VBox>
+    <fx:include fx:id="TabManager" source="TabView.fxml" />
 </SplitPane>
