--- a/src/main/resources/vault/SecretView.fxml
+++ b/src/main/resources/vault/SecretView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.gjvandersloot.mvvm.view.SecretView"
+      fx:controller="com.gjvandersloot.mvvm.view.vault.SecretView"
       prefHeight="400.0" prefWidth="600.0">
         <ToolBar style="-fx-background-color: #f0f0f0">
             <Button fx:id="copy" onAction="#copySecret" text="Copy" />
