--- a/src/main/resources/vault/CertificateView.fxml
+++ b/src/main/resources/vault/CertificateView.fxml
@@ -7,15 +7,15 @@
       fx:controller="com.gjvandersloot.mvvm.view.vault.CertificateView"
       prefHeight="400.0" prefWidth="600.0">
     <ToolBar style="-fx-background-color: #f0f0f0">
-        <Button fx:id="copy" onAction="#copySecret" text="Copy" />
-        <Button fx:id="show" onAction="#showSecret" text="Show" />
+<!--        <Button fx:id="copy" onAction="#copySecret" text="Copy" />-->
+<!--        <Button fx:id="show" onAction="#showSecret" text="Show" />-->
         <Separator orientation="VERTICAL" />
-        <Button onAction="#addSecret" text="New" />
-        <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteSecret" text="Delete" />
+<!--        <Button onAction="#addSecret" text="New" />-->
+<!--        <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteSecret" text="Delete" />-->
         <Separator orientation="VERTICAL" />
         <TextField fx:id="filterField" promptText="Search secret" />
     </ToolBar>
-    <TableView fx:id="secretsTable" VBox.vgrow="ALWAYS">
+    <TableView fx:id="certsTable" VBox.vgrow="ALWAYS">
         <columns>
             <TableColumn fx:id="nameColumn" prefWidth="150" text="Secret name"/>
             <TableColumn fx:id="thumbPrintColumn" prefWidth="200" text="Value"/>
