--- a/src/main/resources/vault/CertificateView.fxml
+++ b/src/main/resources/vault/CertificateView.fxml
@@ -7,7 +7,7 @@
       fx:controller="com.gjvandersloot.mvvm.view.vault.CertificateView"
       prefHeight="400.0" prefWidth="600.0">
     <ToolBar style="-fx-background-color: #f0f0f0">
-<!--        <Button fx:id="copy" onAction="#copySecret" text="Copy" />-->
+        <Button fx:id="downloadBtn" onAction="#download" text="Download" />
 <!--        <Button fx:id="show" onAction="#showSecret" text="Show" />-->
         <Separator orientation="VERTICAL" />
 <!--        <Button onAction="#addSecret" text="New" />-->
@@ -18,9 +18,9 @@
     <TableView fx:id="certsTable" VBox.vgrow="ALWAYS">
         <columns>
             <TableColumn fx:id="nameColumn" prefWidth="150" text="Secret name"/>
-            <TableColumn fx:id="thumbPrintColumn" prefWidth="200" text="Value"/>
-            <TableColumn fx:id="statusColumn" prefWidth="200" text="Value"/>
-            <TableColumn fx:id="expirationColumn" prefWidth="200" text="Value"/>
+            <TableColumn fx:id="thumbPrintColumn" prefWidth="200" text="Thumbprint"/>
+            <TableColumn fx:id="statusColumn" prefWidth="200" text="Status"/>
+            <TableColumn fx:id="expirationColumn" prefWidth="200" text="Expiration date"/>
         </columns>
     </TableView>
 </VBox>
