--- a/src/main/resources/vault/SecretView.fxml
+++ b/src/main/resources/vault/SecretView.fxml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.VBox?>
-<VBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.gjvandersloot.mvvm.view.vault.SecretView"
-      prefHeight="400.0" prefWidth="600.0">
-        <ToolBar style="-fx-background-color: #f0f0f0">
-            <Button fx:id="copy" onAction="#copySecret" text="Copy" />
-            <Button fx:id="show" onAction="#showSecret" text="Show" />
-            <Separator orientation="VERTICAL" />
-            <Button onAction="#addSecret" text="New" />
-            <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteSecret" text="Delete" />
-            <Separator orientation="VERTICAL" />
-            <TextField fx:id="filterField" promptText="Search secret" />
-        </ToolBar>
-        <TableView fx:id="secretsTable" VBox.vgrow="ALWAYS">
-            <columns>
-                <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name"/>
-                <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value"/>
-                <TableColumn fx:id="statusColumn" prefWidth="200" text="Status"/>
-                <TableColumn fx:id="expirationColumn" prefWidth="200" text="Expiration date"/>
-            </columns>
-        </TableView>
-    </VBox>
+<?import javafx.scene.layout.*?>
+
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.mvvm.view.vault.SecretView">
+    <ToolBar style="-fx-background-color: #f0f0f0">
+        <Button fx:id="copy" onAction="#copySecret" text="Copy" />
+        <Button fx:id="show" onAction="#showSecret" text="Show" />
+        <Separator orientation="VERTICAL" />
+        <Button onAction="#addSecret" text="New" />
+        <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteSecret" text="Delete" />
+        <Separator orientation="VERTICAL" />
+        <TextField fx:id="filterField" promptText="Search secret" />
+    </ToolBar>
+    <HBox fx:id="warningBanner" visible="false" maxWidth="Infinity" managed="false" spacing="10"
+          style="-fx-background-color: #fff8c4; -fx-padding: 10; -fx-border-color: #f2c200; -fx-border-width: 0 0 1 0;">
+        <Label fx:id="warningMessage" HBox.hgrow="ALWAYS" wrapText="true" maxWidth="Infinity" style="-fx-text-fill: black;" />
+<!--        <Button fx:id="closeBanner" style="-fx-background-color: transparent;" text="✕" />-->
+        <Region HBox.hgrow="ALWAYS" />
+        <Button fx:id="copyBannerMessage">
+            <graphic>
+                <ImageView fitWidth="16" fitHeight="16" preserveRatio="true">
+                    <Image url="@/img/copy.png" />
+                </ImageView>
+            </graphic>
+        </Button>
+    </HBox>
+    <TableView fx:id="secretsTable" VBox.vgrow="ALWAYS">
+        <columns>
+            <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name" />
+            <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value" />
+            <TableColumn fx:id="statusColumn" prefWidth="200" text="Status" />
+            <TableColumn fx:id="expirationColumn" prefWidth="200" text="Expiration date" />
+        </columns>
+    </TableView>
+</VBox>
