--- a/src/main/resources/vault/KeyView.fxml
+++ b/src/main/resources/vault/KeyView.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.image.Image?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.gjvandersloot.mvvm.view.vault.CertificateView"
+      fx:controller="com.gjvandersloot.mvvm.view.vault.KeyView"
       prefHeight="400.0" prefWidth="600.0">
     <ToolBar style="-fx-background-color: #f0f0f0">
         <Button fx:id="downloadBtn" onAction="#download" text="Download" />
-<!--        <Button fx:id="show" onAction="#showSecret" text="Show" />-->
+        <!--        <Button fx:id="show" onAction="#showSecret" text="Show" />-->
         <Separator orientation="VERTICAL" />
-<!--        <Button onAction="#addSecret" text="New" />-->
-<!--        <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteSecret" text="Delete" />-->
+        <!--        <Button onAction="#addSecret" text="New" />-->
+        <!--        <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteSecret" text="Delete" />-->
         <Separator orientation="VERTICAL" />
         <TextField fx:id="filterField" promptText="Search secret" />
     </ToolBar>
